# avanza-trader

./: .gitignore  package.json
src-python/: main.py  pyproject.toml
src-python/app/: __init__.py
src-tauri/: tauri.conf.json
src/components/AccountsList/: AccountsList.tsx  index.ts
src/components/AuthWrapper/: AuthWrapper.tsx
src/components/CurrencyInput/: CurrencyInput.tsx
src/components/DataTable/: DataTable.tsx
src/components/InstrumentInfo/: InstrumentInfo.tsx  index.ts
src/components/Navigation/: Breadcrumb.tsx  Navigation.tsx
src/components/OrderDepth/: OrderDepth.styles.tsx  OrderDepth.tsx  index.ts
src/components/OrderDrawer/: OrderActiveInfo.tsx  OrderCompleteInfo.tsx  OrderDrawer.styles.tsx  OrderDrawer.tsx  OrderProgress.tsx  index.ts
src/components/SecurityChart/: SecurityChart.tsx  index.ts
src/components/SessionMenu/: SessionMenu.styles.tsx  SessionMenu.tsx  index.ts
src/components/Spotlight/: Spotlight.tsx
src/components/SpotlightActionsWrapper/: SpotlightActionsWrapper.tsx  index.ts
src/context/: AvanzaContext.tsx  OrdersContext.tsx
src/hooks/useAccounts/: index.ts  useAccounts.tsx
src/hooks/useAvanza/: index.ts  useAvanza.tsx
src/hooks/useCache/: useCache.tsx
src/hooks/useGlobalSearch/: index.ts  useGlobalSearch.tsx
src/hooks/useInstrument/: index.ts  useInstrument.tsx
src/hooks/useInstrumentDetails/: index.ts  useInstrumentDetails.tsx
src/hooks/useOrdersContext/: index.ts  useOrdersContext.tsx
src/pages/: _app.tsx  index.tsx  login.tsx
src/utils/: error.ts  notifications.tsx  platform.ts  routes.ts
(+3 files in other folders)
