[tool.poetry]
name = "avanza_trader"
version = "0.1.0"
description = ""
authors = ["Ante Wall <antewall@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pyportfolioopt = "^1.5.4"
yfinance = "^0.2.3"
requests = "^2.28.1"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.7.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
